--- a/changelog.txt
+++ b/changelog.txt
@@ -27,3 +27,7 @@ This document lists most of the bug fixes and changes.
 # re-added repeating events under daily "add event" (ex: 5# Vacation)... this will create 5 vacation events
 
 # added 'enablerepeatevents'... enabling this with double the load times because it pulls the previous months events (30 days X 5 events-per-day X 2 months)..basically hits the db 300 times..now double that for for each subscribed calendar...<sigh>
+
+# added a few css style files to change the calendar look and feel
+
+# removed the need for the $wgExtensionPath override; calendar can be anywhere now
