--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,13 @@
 This document lists most of the trunk/beta changes. Once the trunk is released, the 
 notes will be added to the next released 'Readme.txt'. The notes in this file will then be erased.
 
+********** v3.5.0.2 **********
+# fixed an issue with legacy events created in v3.0 and parts of v3.2; need to use 'enablelegacy' to view older events though
+
+# moved from cookies to session states... this controls the 'month/year/today' buttons
+
+
 ********** Trunk: v3.5.1 **********
 # re-ordered the template/add event list... it will now be templates 1st, then normal events
+
 # added initial logic for basic ical imports (VCALENDAR)...event, summary and date; use the 'ical' parameter to activate the tool... defaults to adding a new event, but 'ical=usemultievent' will add concat all events to '-event 0'
