--- a/changelog.txt
+++ b/changelog.txt
@@ -9,3 +9,4 @@ notes will be added to the next released 'Readme.txt'. The notes in this file wi
 # added user triggered yearly repeating events, but not solid on a delimiter yet..currently, it identifies a yearly 
   repeat using the folowing ":# Eric's Birthday". This will take that event, convert it into an RRULE event and store 
   it with under "page/name/recurrence"
+# added internationalization support for french and spanish
